--- a/Assignments/state-capital-app/package.json
+++ b/Assignments/state-capital-app/package.json
@@ -9,10 +9,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "pg": "^8.13.0"
-  }
+    "pg": "^8.13.1"
+  },
+  "description": ""
 }
